# prog2coursecpp

./: CMakeLists.txt
classwork/: 16_09_05b.cpp
classwork/SEPTEMBER20/: 16_09_05.cpp  16_09_05a.cpp  sep23_1.cpp  sep23_t1.c  sep23_t5.c  sep23_t6.c  sep23_task1.cpp  task1.cpp
classwork/november15/: task2.cpp  task4.cpp
classwork/november18/: input1.txt  input2.txt  output1.txt  output2.txt  task1.cpp  task3.cpp
classwork/november22/: task1.cpp  task4.cpp  task5.cpp
classwork/november4/: task1.cpp  task2.cpp
classwork/october14/: tsk2.cpp  tsk6.cpp
classwork/october18/: ex14_01.cpp  ex14_03.cpp  input.txt  input2.txt  output.txt
classwork/october5/: task1.c  task5.c
classwork/september27/: t01.cpp  t02.cpp  t03.cpp  t04.cpp
classwork/september30/: ex1.cpp  ex2.cpp  task1.cpp
homework1/: t_01_12.cpp  t_01_13.cpp  t_01_16a.cpp  t_01_17.cpp
homework10/: t_10_06z.cpp  t_10_16av.cpp
homework11/: input1.txt  input2.txt  t_11_07d.cpp  t_11_11v.cpp
homework12/: input.txt  t_12_15.cpp
homework13/: t_13_10.cpp  t_13_25.cpp
homework14/: input.txt  output.txt  students.txt  t_14_05.cpp  t_14_26.cpp
homework15/: catalog.txt  t_15_11.cpp
homework16/: t_16_05.cpp
homework17/: t_17_03.cpp
homework18/: t_18_03.cpp
homework19/: t_19_08.cpp  t_19_12.cpp
homework2/: t_02_09.cpp  t_02_17g.cpp
homework20/: t20_12.cpp  t20_16.cpp
homework21/: input14.txt  t21_16.cpp  t_21_05.cpp  t_21_14.cpp
homework3/: t_03_22.cpp  t_03_23e.cpp
homework4/: t_04_13g.cpp  t_04_18a.cpp  t_04_27zh.cpp
homework5/: t_05_11a.cpp  t_05_12d.cpp  t_05_16l.cpp
homework6/: t_06_12.cpp  t_06_24.cpp
homework7/: t_07_08i.cpp  t_07_09e.cpp
homework8/: t_08_17.cpp
homework9/: t_09_09c.cpp
