cmake_minimum_required(VERSION 3.29)
project(proghome2)

set(CMAKE_CXX_STANDARD 20)

add_executable(proghome2 main.cpp
        #homework1/t_01_12.cpp
        #homework1/t_01_13.cpp
        #homework1/t_01_16a.cpp
        #classwork/13_09_03.cpp
        #classwork/16_09_05.cpp
        #classwork/16_09_05a.cpp
        classwork/16_09_05b.cpp)


