cmake_minimum_required(VERSION 3.29)
project(proghome2)

set(CMAKE_CXX_STANDARD 20)

add_executable(proghome2 main.cpp
        #classwork/november22/task1.cpp
        #homework19/t_19_08.cpp
        #homework19/t_19_12.cpp
        #homework20/t20_12.cpp
        #homework20/t20_16.cpp
        #homework21/t_21_05.cpp
        #homework21/t_21_14.cpp
        homework21/t21_16.cpp
        #homework16/t_16_05.cpp
        #homework14/t_14_05.cpp
        #homework14/t_14_26.cpp
        #homework13/t_13_10.cpp
        #homework13/t_13_25.cpp
        #homework12/t_12_15.cpp
        #classwork/november4/task1.cpp
        #classwork/november4/task2.cpp
        #homework17/t_17_03.cpp
        #homework18/t_18_03.cpp
        #classwork/november15/task2.cpp
        #classwork/november15/task4.cpp
        #classwork/november18/task1.cpp
        #classwork/november22/task5.cpp
        #classwork/november22/task4.cpp
        #classwork/november18/task3.cpp

        #homework6/t_06_12.cpp
        #homework6/t_06_24.cpp
        #homework7/t_07_08i.cpp
        #homework7/t_07_09e.cpp
        #homework8/t_08_17.cpp
        #homework9/t_09_09c.cpp
        #homework10/t_10_06z.cpp
        #homework10/t_10_16av.cpp
        #homework11/t_11_07d.cpp
        #homework11/t_11_11v.cpp
        #homework15/t_15_11.cpp
        #homework5/t_05_16l.cpp
        #homework5/t_05_12d.cpp
        #homework5/t_05_11a.cpp
        #homework4/t_04_27zh.cpp
        #homework4/t_04_13g.cpp
        #homework4/t_04_18a.cpp
        #classwork/october18/ex14_01.cpp
        #classwork/october18/ex14_03.cpp
        #homework3/t_03_22.cpp
        #homework3/t_03_23e.cpp
        #homework2/t_02_09.cpp
        #homework2/t_02_17g.cpp
        #classwork/september30/task1.cpp
        #classwork/september30/ex1.cpp
        #classwork/september30/ex2.cpp
        #classwork/october5/task1.c
        #classwork/october14/tsk2.cpp
        #classwork/october14/tsk5.cpp
        #classwork/october14/tsk6.cpp
        #homework1/t_01_17.cpp
        #classwork/october5/task5.c
        #classwork/SEPTEMBER20/sep23_1.cpp
        #classwork/SEPTEMBER20/sep23_task1.cpp

        #classwork/SEPTEMBER20/sep23_t1.c
        #classwork/SEPTEMBER20/sep23_t5.c
        #classwork/SEPTEMBER20/sep23_t6.c
        #classwork/september27/t01.cpp
        #classwork/september27/t02.cpp
        #classwork/september27/t03.cpp
        #classwork/september27/t04.cpp
        #homework1/t_01_12.cpp
        #homework1/t_01_13.cpp
        #homework1/t_01_16a.cpp
        #homework1/t_01_16a.cpp
        #classwork/13_09_03.cpp
        #classwork/16_09_05.cpp
        #classwork/16_09_05a.cpp
        #classwork/16_09_05b.cpp
        #classwork/SEPTEMBER20/task1.cpp
)


